# openapi-rust-generator

./: .gitignore  README.md  pom.xml
test/: Cargo.toml
test/src/apis/: activity_log_service_api.rs  artists_service_api.rs  audio_service_api.rs  bif_service_api.rs  branding_service_api.rs  channel_service_api.rs  client.rs  collection_service_api.rs  configuration.rs  configuration_service_api.rs  connect_service_api.rs  dashboard_service_api.rs  device_service_api.rs  display_preferences_service_api.rs  dlna_server_service_api.rs  dlna_service_api.rs  dynamic_hls_service_api.rs  encoding_info_service_api.rs  environment_service_api.rs  filter_service_api.rs  game_genres_service_api.rs  games_service_api.rs  genres_service_api.rs  hls_segment_service_api.rs  image_by_name_service_api.rs  image_service_api.rs  instant_mix_service_api.rs  item_lookup_service_api.rs  item_refresh_service_api.rs  item_update_service_api.rs  items_service_api.rs  library_service_api.rs  library_structure_service_api.rs  live_tv_service_api.rs  localization_service_api.rs  media_info_service_api.rs  mod.rs  movies_service_api.rs  music_genres_service_api.rs  news_service_api.rs  (+30 more)
test/src/models/: activity_log_entry.rs  all_theme_media_result.rs  authenticate_user.rs  authenticate_user_by_name.rs  authentication_authentication_result.rs  base_item_dto.rs  base_item_person.rs  branding_branding_options.rs  chapter_info.rs  client_capabilities.rs  collections_collection_creation_result.rs  configuration_access_schedule.rs  configuration_codec_configuration.rs  configuration_image_option.rs  (+188 more)
(+9 files in other folders)
