[package]
name = "openapi"
version = "1.0.0"
authors = ["OpenAPI Generator team and contributors"]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
reqwest = { version = "0.10.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.45"
serde_path_to_error = "0.1.2"
tokio = { version = "1.8", features = ["full"] }
url = "2.1.1"
